--- a/ProfileMatch.Components/Admin/Dialogs/AdminUserDialog.razor
+++ b/ProfileMatch.Components/Admin/Dialogs/AdminUserDialog.razor
@@ -143,7 +143,7 @@ else
             {
                 <MudButton Size="Size.Small" Variant=Variant.Outlined Color="Color.Warning" OnClick="@(()=>ResetPassword(_passwordHash))">@L["Change Password"]</MudButton>
             }
-            @if (_canChangeRoles)
+            @if (_canChangeRoles&&_created)
             {
                 <MudButton Size="Size.Small" Color="Color.Error" Variant="Variant.Outlined" OnClick="ToggleOpen">@L["Delete"]</MudButton>
             }
