--- a/ProfileMatch.Web/App.razor
+++ b/ProfileMatch.Web/App.razor
@@ -9,7 +9,7 @@
     </Found>
     <NotFound>
             <LayoutView Layout="@typeof(MainLayout)">
-                <NoContent />
+         <PageNotFound />
             </LayoutView>
     </NotFound>
 </Router>
