--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -4,5 +4,13 @@
     ViewData["Title"] = "Confirm email change";
 }
 
-<h1>@ViewData["Title"]</h1>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
+@*<h1>@ViewData["Title"]</h1>
+<partial name="_StatusMessage" model="Model.StatusMessage" />*@
+<header class="text-center">
+    <h1 class="text-danger display-1">404</h1>
+    <h2>OOPS! PAGE YOU REQUESTED COULD NOT FOUND</h2>
+    <p/>
+    <div>
+    <a class="btn btn-primary" href="/" role="button">@L["Back"]</a>
+</div>
+</header>
