--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/ConfirmEmailError.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/ConfirmEmailError.cshtml
@@ -4,10 +4,18 @@
     ViewData["Title"] = @L["Email confirmation error"];
 }
 
-<h1>@ViewData["Title"]</h1>
+@*<h1>@ViewData["Title"]</h1>
 <h4>@L["Sorry, there was an error verifying your email."]</h4>
 <hr />
 <div>
     <a class="btn btn-primary" href="/Identity/Account/Login" role="button">@L["Back to login page"]</a>
 
+</div>*@
+<header class="text-center">
+    <h1 class="text-danger display-1">404</h1>
+    <h2>OOPS! PAGE YOU REQUESTED COULD NOT FOUND</h2>
+    <p/>
+    <div>
+    <a class="btn btn-primary" href="/" role="button">@L["Back"]</a>
 </div>
+</header>
