--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @model RegisterConfirmationModel
-@{
+@*{
     ViewData["Title"] = "Register confirmation";
 }
 
@@ -19,4 +19,12 @@
             Please check your email to confirm your account.
         </p>
     }
-}
+}*@
+<header class="text-center">
+    <h1 class="text-danger display-1">404</h1>
+    <h2>OOPS! PAGE YOU REQUESTED COULD NOT FOUND</h2>
+    <p/>
+    <div>
+    <a class="btn btn-primary" href="/" role="button">@L["Back"]</a>
+</div>
+</header>
