--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,18 @@
 ﻿@page
 @model ResetPasswordConfirmationModel
-@{
+@*@{
     ViewData["Title"] = "Reset password confirmation";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
     Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+</p>*@
+<header class="text-center">
+    <h1 class="text-danger display-1">404</h1>
+    <h2>OOPS! PAGE YOU REQUESTED COULD NOT FOUND</h2>
+    <p/>
+    <div>
+    <a class="btn btn-primary" href="/" role="button">@L["Back"]</a>
+</div>
+</header>
