--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -4,7 +4,15 @@
     ViewData["Title"] = "Locked out";
 }
 
-<header>
+@*<header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">This account has been locked out, please try again later.</p>
+</header>*@
+<header class="text-center">
+    <h1 class="text-danger display-1">404</h1>
+    <h2>OOPS! PAGE YOU REQUESTED COULD NOT FOUND</h2>
+    <p/>
+    <div>
+    <a class="btn btn-primary" href="/" role="button">@L["Back"]</a>
+</div>
 </header>
