--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Two-factor authentication";
 }
 
-<h1>@ViewData["Title"]</h1>
+@*<h1>@ViewData["Title"]</h1>
 <hr />
 <p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>
 <div class="row">
@@ -38,4 +38,12 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}
+}*@
+<header class="text-center">
+    <h1 class="text-danger display-1">404</h1>
+    <h2>OOPS! PAGE YOU REQUESTED COULD NOT FOUND</h2>
+    <p/>
+    <div>
+    <a class="btn btn-primary" href="/" role="button">@L["Back"]</a>
+</div>
+</header>
