--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,2 +1,10 @@
 ﻿@page
 @model RegisterModel
+<header class="text-center">
+    <h1 class="text-danger display-1">404</h1>
+    <h2>OOPS! PAGE YOU REQUESTED COULD NOT FOUND</h2>
+    <p/>
+    <div>
+    <a class="btn btn-primary" href="/" role="button">@L["Back"]</a>
+</div>
+</header>
