Brak możliwości zmiany maila u użytkownika - done Problem ze zmianą Roli (podczas robienia zapisz program wyświetla komunikat o tym że mail już istnieje) - done Podczas zmiany hasła wyświetla że potrzebuje 8 znaków ale po nim wyświetla komunikat na zielono że zmieniono - done W pytaniach zamkniętych podczas tworzenia pytania w kategorii dodaje się pytanie ale do pustej kategorii - done I jest zielony przycisk nowe pytanie który nic nie robi - removed Nie można dodać pytania zamkniętego - done

--- a/ProfileMatch.Components/Admin/Dialogs/AdminAnswerOptionDialog.razor
+++ b/ProfileMatch.Components/Admin/Dialogs/AdminAnswerOptionDialog.razor
@@ -1,4 +1,4 @@
-﻿@if (_answerOptionVMs.Count == 5)
+﻿@if (_answerOptions is not null &&_answerOptions.Count == 5)
 {
     <MudDialog>
         <DialogContent>
@@ -11,7 +11,7 @@
                  DisableSliderAnimation="true"
                  HideSlider="true"
                  PanelClass="pa-6 d-block">
-                    @foreach (var option in _answerOptionVMs)
+                    @foreach (var option in _answerOptions)
                     {
                         <MudTabPanel Text="@option.Level.ToString()">
                             <MudTextField Required=true T="string" @bind-Value="@option.Description" Immediate="true" Label=@L["Option Description EN"] Lines="5" />
