--- a/ProfileMatch.Components/Admin/Dialogs/AdminDepartmentListDialog.razor
+++ b/ProfileMatch.Components/Admin/Dialogs/AdminDepartmentListDialog.razor
@@ -4,7 +4,7 @@
 }
 else
 {
-    <MudDataGrid MultiSelection="true" Items="@Departments" Sortable="true" Filterable="true" QuickFilter="@_quickFilter">
+    <MudDataGrid MultiSelection="true" Items="@_departments" Sortable="true" Filterable="true" QuickFilter="@QuickFilter">
         <ToolBarContent>
             <MudText Typo="Typo.h6">Periodic Departments</MudText>
             <MudSpacer />
@@ -12,11 +12,14 @@ else
                       AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         </ToolBarContent>
         <Columns>
-            <Column T="Department" Field="Number" Title="Nr" Sortable="false" Filterable="false" />
-            <Column T="Department" Field="Sign" />
-            <Column T="Department" Field="Name" SortBy="@_sortBy" />
-            <Column T="Department" Field="Position" />
-            <Column T="Department" Field="Molar" Title="Molar mass" />
+            <Column T="Department" Field="Name" Title="Name">
+                <CellTemplate>
+                  <MudIconButton Color="Color.Primary" OnClick="@(()=> DepartmentUpdate(context))" Icon="@Icons.Outlined.Settings" Size="Size.Small" Variant="Variant.Outlined" />  @context.Name
+                </CellTemplate>
+            </Column>
+            <Column T="Department" Field="NamePl" Title="NamePl"/>
+            <Column T="Department" Field="Description" Title="Description"/>
+            <Column T="Department" Field="DescriptionPl" Title="DescriptionPl"/>
         </Columns>
         <PagerContent>
             <MudDataGridPager T="Department" />
