--- a/ProfileMatch.Components/Admin/AdminClosedQuestions.razor
+++ b/ProfileMatch.Components/Admin/AdminClosedQuestions.razor
@@ -57,26 +57,18 @@ else
                         @L["Category"] <MudIconButton OnClick="@(()=>CategoryCreate())" Size="Size.Small" Variant=Variant.Outlined Color="Color.Primary" Icon="@Icons.Outlined.Add" />
                     </HeaderTemplate>
                 </Column>
-                <Column Field="Name" T="ClosedQuestionVM" Title="Question" />
+                <Column Field="Name" T="ClosedQuestionVM" Title="Question" >
+                      <CellTemplate>
+                        <MudIconButton Color="Color.Primary" OnClick="@(()=>QuestionDialog(context))" Icon="@Icons.Outlined.Settings" Size="Size.Small" Variant="Variant.Outlined" />
+                            @context.Name
+                    </CellTemplate>
+                </Column>
                 <Column Field="IsActive" T="ClosedQuestionVM" Title="Active">
                     <CellTemplate>
                         @(context.IsActive?"Yes":"No")
                     </CellTemplate>
                 </Column>
                 <Column Field="Description" T="ClosedQuestionVM" Title="Description" />
-                <Column Sortable="false" T="ClosedQuestionVM" Title="Actions">
-                    <CellTemplate>
-                        @if (context.Id > 0)
-                        {
-                            <MudButton Color="Color.Primary" OnClick="@(()=>QuestionDialog(context))" Size="Size.Small"
-                           Variant="Variant.Outlined">@L["Edit Question"]</MudButton>
-                        }
-                        else
-                        {
-                            <MudButton Color="Color.Info" OnClick="@(()=>QuestionDialog(context))">@L["New Question"]</MudButton>
-                        }
-                    </CellTemplate>
-                </Column>
             }
             else
             {
@@ -86,26 +78,18 @@ else
                         @L["Category"] <MudIconButton OnClick="@(()=>CategoryCreate())" Size="Size.Small" Variant=Variant.Outlined Color="Color.Primary" Icon="@Icons.Outlined.Add" />
                     </HeaderTemplate>
                 </Column>
-                <Column Field="NamePl" T="ClosedQuestionVM" Title="Pytanie" />
+                <Column Field="NamePl" T="ClosedQuestionVM" Title="Pytanie">
+                    <CellTemplate>
+                        <MudIconButton Color="Color.Primary" OnClick="@(()=>QuestionDialog(context))" Icon="@Icons.Outlined.Settings" Size="Size.Small" Variant="Variant.Outlined" />
+                            @context.NamePl
+                    </CellTemplate>
+                </Column>
                 <Column Field="IsActive" T="ClosedQuestionVM" Title="Aktywne">
                     <CellTemplate>
                         @(context.IsActive?"Tak":"Nie")
                     </CellTemplate>
                 </Column>
                 <Column Field="DescriptionPl" T="ClosedQuestionVM" Title="Opis" />
-                <Column Sortable="false" T="ClosedQuestionVM" Title="Działania">
-                    <CellTemplate>
-                        @if (context.Id > 0)
-                        {
-                            <MudButton Color="Color.Primary" OnClick="@(()=>QuestionDialog(context))" Size="Size.Small"
-                           Variant="Variant.Outlined">@L["Edit Question"]</MudButton>
-                        }
-                        else
-                        {
-                            <MudButton Color="Color.Info" OnClick="@(()=>QuestionDialog(context))">@L["New Question"]</MudButton>
-                        }
-                    </CellTemplate>
-                </Column>
             }
         </Columns>
         <PagerContent>
