--- a/ProfileMatch.Components/User/UserCertList.razor
+++ b/ProfileMatch.Components/User/UserCertList.razor
@@ -11,7 +11,7 @@
                       Immediate="true"
                       AdornmentIcon="@Icons.Material.Filled.Search"
                       IconSize="Size.Medium"></MudTextField>
-<MudButton OnClick=@CertUpdate>@L["Add New"]</MudButton>
+ <MudButton Variant=Variant.Outlined Size="Size.Small" Color="Color.Primary" OnClick=@CertUpdate>@L["Add New"]</MudButton>
     </MudItem>
      </MudGrid>
    <MudGrid  Class="d-flex justify-flex-center">
